--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>New to Colorado and new to coding</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Hoboken, NJ</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gardening</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Owning an animal sanctuary</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To enhance my technical skills</p>
     </section>
 
     <footer id="footer">
